--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "Electron app with Next.js",
   "main": "electron/main.js",
   "scripts": {
-    "dev": "concurrently \"npm run dev:next\" \"npm run dev:electron\"",
-    "dev:next": "cd renderer && npx next dev",
-    "dev:electron": "wait-on http://localhost:3000 && electron .",
-    "build": "cd renderer && npx next build && npx next export -o ../dist",
+    "dev": "concurrently \"npm run start-python\" \"npm run dev:renderer\" \"npm run dev:electron\"",
+    "dev:renderer": "cd renderer && npm run dev",
+    "dev:electron": "electron .",
+    "start-python": "python app.py",
+    "build": "cd renderer && npm run build",
     "start": "electron ."
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "electron-is-dev": "^2.0.0",
     "next": "^14.0.0",
+    "node-fetch": "^2.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
